# BurningSky

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: renderer2d_color.vert  renderer2d_texture.frag  renderer2d_texture.vert  simple.frag  simple.vert
engine/include/BurningSky/Core/: Application.h  Input.h  KeyCodes.h  Layer.h  Window.h
engine/include/BurningSky/Graphics/: IndexBuffer.h  OrthographicCamera.h  Renderer2D.h  Shader.h  Texture2D.h  TextureLibrary.h  VertexArray.h  VertexBuffer.h
engine/include/BurningSky/Platform/: GLFWWindow.h
engine/src/Core/: Application.cpp  Input.cpp  Window.cpp
engine/src/Graphics/: IndexBuffer.cpp  OrthographicCamera.cpp  Renderer2D.cpp  Shader.cpp  Texture2D.cpp  TextureLibrary.cpp  VertexArray.cpp  VertexBuffer.cpp
engine/src/Platform/: GLFWWindow.cpp
game/: CMakeLists.txt
game/src/: GameLayer.cpp  GameLayer.h  main.cpp
game/src/Scenes/: LoseScene.cpp  LoseScene.h  PlayScene.cpp  PlayScene.h  Scene.h  TitleScene.cpp  TitleScene.h
